Fix docs nav overflow

--- a/content/docs-site/.vitepress/theme/custom.css
+++ b/content/docs-site/.vitepress/theme/custom.css
@@ -92,7 +92,7 @@ body {
 }
 
 .VPNavBarExtra {
-  min-width: max-content;
+  display: none !important;
 }
 
 @media (max-width: 760px) {
